--- a/Kdrama.css
+++ b/Kdrama.css
@@ -1,3 +1,7 @@
+ h1 {
+    text-align:center;
+    color: #33C9D5;
+    }
  img {
     border: 1px solid black;
     border-radius: 1px;
@@ -7,7 +11,7 @@
     }   
    .topnav {
     overflow: hidden;
-    background-color: #43858A;
+    background-color: powderblue;
     }
    .topnav a {
     float: left;
